k8s/payment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: homework
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: payment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: payment
          image: vsamarin/payment:1.0.0
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8002
