k8s/payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: homework
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/actuator/prometheus"
spec:
  selector:
    app: payment
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8002
  type: ClusterIP
